# Control.Serialization.Api

./: CMakeLists.txt
docs/: Architecture.md
mock/: CMakeLists.txt
mock/PiSubmarine/Control/: IDeserializerMock.h  ISerializerMock.h
public/PiSubmarine/Control/: ErrorCode.h  IDeserializer.h  ISerializer.h
src/: CMakeLists.txt
src/PiSubmarine/Control/: ErrorCode.cpp
test/: CMakeLists.txt
test/PiSubmarine/Control/: ErrorCodeTest.cpp  IDeserializerTest.cpp  ISerializerTest.cpp  SerializationMockTest.cpp
